# actions

./: .gitignore  CMakeLists.txt  main.cpp
scripts/: build-x64-win-vs-release.bat  build-x86_64-linux.sh
